0031803: Samples: Overview QT - OCAF - Switching on other samples do not cause context cleaning Light management